// Vitest Snapshot v1

exports[`diffPackageJson > Empty package.json > diffs 1`] = `
[
  {
    "from": undefined,
    "key": "main",
    "to": "./dist/index.cjs",
  },
  {
    "from": undefined,
    "key": "module",
    "to": "./dist/index.esm.js",
  },
  {
    "additions": [
      "/dist",
      "/css",
      "/themes/apac",
    ],
    "key": "files",
  },
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > Empty package.json > expectedPackageJson 1`] = `
{
  "exports": {
    ".": {
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs",
      "types": "./dist/index.cjs.d.ts",
    },
    "./css": {
      "import": "./css/dist/index.esm.js",
      "require": "./css/dist/index.cjs",
      "types": "./css/dist/index.cjs.d.ts",
    },
    "./package.json": "./package.json",
    "./themes/apac": {
      "import": "./themes/apac/dist/index.esm.js",
      "require": "./themes/apac/dist/index.cjs",
      "types": "./themes/apac/dist/index.cjs.d.ts",
    },
  },
  "files": [
    "/css",
    "/dist",
    "/themes/apac",
  ],
  "main": "./dist/index.cjs",
  "module": "./dist/index.esm.js",
}
`;

exports[`diffPackageJson > Incorrect package.json > diffs 1`] = `
[
  {
    "from": "dist/index.esm.invalid",
    "key": "module",
    "to": "./dist/index.esm.js",
  },
  {
    "additions": [
      "/themes/apac",
    ],
    "key": "files",
  },
  {
    "key": "exports",
  },
]
`;

exports[`diffPackageJson > Incorrect package.json > expectedPackageJson 1`] = `
{
  "exports": {
    ".": {
      "import": "./dist/index.esm.js",
      "require": "./dist/index.cjs",
      "types": "./dist/index.cjs.d.ts",
    },
    "./css": {
      "import": "./css/dist/index.esm.js",
      "require": "./css/dist/index.cjs",
      "types": "./css/dist/index.cjs.d.ts",
    },
    "./package.json": "./package.json",
    "./themes/apac": {
      "import": "./themes/apac/dist/index.esm.js",
      "require": "./themes/apac/dist/index.cjs",
      "types": "./themes/apac/dist/index.cjs.d.ts",
    },
  },
  "files": [
    "/apac",
    "/css",
    "/dist",
    "/themes/apac",
  ],
  "main": "./dist/index.cjs",
  "module": "./dist/index.esm.js",
}
`;
